--- a/www/templates/create-proposal.html
+++ b/www/templates/create-proposal.html
@@ -57,7 +57,7 @@
         </div>
     </div>
     <div class="row lastRow">
-        <div class="col" ng-controller="ProposalsCtrl">
+        <div class="col">
             <section>
                 <a href="#/app/proposals/{{proposal.id}}" 
                     class="button button-block button-positive" 
