--- a/www/templates/review-proposal.html
+++ b/www/templates/review-proposal.html
@@ -1,55 +1,61 @@
 <ion-view>
   <ion-content>
-    <div class="row">
-      <div class="col col-100">    
+    <div class="row  responsive-sm">
+      <div class="col">    
         <h1>Review Proposal</h1>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
+    <div class="row responsive-sm">
+        <!-- side panel -->
+        <div class="col col-20">
             <h3>Details</h3>
             <p><strong>Requester:</strong> 
               <span>{{proposal.contact}}</span>
             </p>
             <p><strong>Title:</strong> {{proposal.title}}</p>
             <p><strong>Description:</strong> {{proposal.description}}</p>
-            <p><strong>Due Date:</strong> {{proposal.dueDate}}</p>
-            <p><strong>PO Number:</strong> {{proposal.poNumber}}</p>
+            <p><strong>Due Date:</strong> {{proposal.dueDate | date}}</p>
+            <p><strong>PO Number:</strong> {{proposal.poNumber | number}}</p>
         </div>
-    </div>
-    <div class="row">
-        <div class="col"><h3>Items</h3></div>
-    </div>
-    <div class="row">
+        <!-- /side panel -->
+        <!-- begin proposal -->
+        <div class="col col-80">
+             <div class="row">
+                <div class="col"><h3>Items</h3></div>
+             </div>
+            <div class="row">
                 <div class="col">
                    <ion-item ng-repeat="item in proposal.items">
-                       <p>Material Type: <span class="item-note">{{item.materialType}}</span></p>
-                       <p>Process: <span class="item-note">{{item.process}}</span></p>
-                       <p>Specifications: <span class="item-note">{{item.specifications}}</span></p>
-                       <p>Descriptionm: <span class="item-note">{{item.description}}</span></p>
-                       <p>Weight: <span class="item-note">{{item.weight}}</span></p>
-                       <p>Length: <span class="item-note">{{item.length}}</span></p>
-                       <p>Width: <span class="item-note">{{item.width}}</span></p>
-                       <p>Quantity: <span class="item-note">{{item.quantity}}</span></p>
-                       <p>Unit Price: <span class="item-note">{{item.unitPrice}}</span></p>
+                       <h4 class="center">Item</h4>
+                       <p><strong>Material Type:</strong> <span class="right"> {{item.materialType}}</span></p>
+                       <p><strong>Process:</strong> <span class="right">{{item.process}}</span></p>
+                       <p><strong>Specifications:</strong> <span class="right">{{item.specifications}}</span></p>
+                       <hr />
+                       <p><strong>Description:</strong> <span class="right">{{item.description}}</span></p>
+                       <p><strong>Weight:</strong> <span class="right">{{item.weight | number}} lbs</span></p>
+                       <p><strong>Length:</strong> <span class="right">{{item.length | number}} ft</span></p>
+                       <p><strong>Width:</strong> <span class="right">{{item.width | number}} ft</span></p>
+                       <hr />
+                       <p><strong>Quantity:</strong> <span class="right">{{item.quantity | number}}</span></p>
+                       <p><strong>Unit Price:</strong> <span class="right">{{item.unitPrice | currency}}</span></p>
                        <hr>
-                       <p><strong>Note:</strong><p>
+                       <p><strong>Notes:</strong></p>
                        <p>{{item.note}}</span></p>  
                     </ion-item>
                 </div>
-        </div>
+            </div>
         <!-- -->
-        <div class="row">
-        <div class="col"><h3>Vendors</h3></div>
+    <div class="row">
+        <div class="col"><h3>Suppliers</h3></div>
     </div>
     <span ng-if="(proposal.vendors).length > 0">
         <div class="row">
             <!--<div class="row">-->
                 <div class="col">
                    <ion-item ng-repeat="vendor in proposal.vendors">
-                       <p>Vendor: <span class="item-note">{{vendor.company}}</span></p>
-                       <p>Contact Name: <span class="item-note">{{vendor.contact}}</span>
-                       <p>Materials Supplied: <span class="item-note">{{vendor.materialType}}</span>
+                       <p>Supplier: <span class="right">{{vendor.company}}</span></p>
+                       <p>Contact Name: <span class="right">{{vendor.contact}}</span>
+                       <p>Materials Supplied: <span class="right">{{vendor.materialType}}</span>
                        <form>
                            <input type="checkbox" checked />
                            <label>Include on proposal</label>
@@ -63,26 +69,23 @@
     <span ng-if="(proposal.vendors).length === 0">
             <div class="row">
                 <div class="col">
+                    <p><i class="icon ion-alert-circled energized"></i>There are no suppliers saved to this proposal.</p>
+                    <p> Click or tap the add vendors button to select suppliers to include on this proposal.</p>
                     <section>
-                        <a  href="#/app/proposals/{{proposal.id}}/vendors" class="button button-block button-positive" ng-click="selectVendors()">Select Vendors</a>
+                        <a  href="#/app/proposals/{{proposal.id}}/vendors" class="button button-block button-positive" ng-click="selectVendors()">Add Suppliers</a>
                     </section>
                 </div>
             </div>
     </span>
     <div class="row">
-                <div class="col">
-                    <section>
-                        <button class="button button-block button-outline button-assertive" ng-click="remove()">Cancel Proposal</button>
-                    </section>
-                </div>
+        <div class="col">
+            <section>
+                <button class="button button-block button-outline button-assertive" ng-click="remove()">Cancel Proposal</button>
+            </section>
+        </div>
     </div>
-    <!--<div class="row">
-                <div class="col">
-                    <section>
-                        {{proposal}}
-                    </section>
-                </div>
-    </div>-->
-    
+        </div>
+        <!-- /end proposal -->
+    </div>    
   </ion-content>
 </ion-view>
