--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,96 +1,154 @@
-
-<ion-view class="has-header">
-  <ion-header-bar align-title="left" class="bar-positive">
-  <div class="buttons">
-    <button class="button" ng-click="doSomething()">Left Button</button>
-  </div>
-  <h1 class="title">Title!</h1>
-  <div class="buttons">
-    <button class="button">Right Button</button>
-  </div>
-</ion-header-bar>
+<ion-view>
   <ion-content>
     <!-- logged out view -->
-    <div ng-if="state.loggedIn == !true">
-    <div class="row responsive-sm">
-      <div class="col text-center">
-        <h1>Welcome to Material Supply Hub.</h1>
-          <p>The connection hub for material manufacturers and suppliers</p>
-       </div>
-    </div>
-    <div class="row responsive-sm">
-      <div class="col col-10"></div>
-      <div class="col col-40">    
-      <ion-slide-box>
-          <ion-slide>
-            <div>   
-              <p><img src="img/placeholder.png" ng-click="nextSlide()"></p>
-            </div>
-          </ion-slide>
-          <ion-slide>
-            <div class="box blue">   
-              <p><img src="img/placeholder.png" ng-click="nextSlide()"></p>
-            </div>
-          </ion-slide>
-          <ion-slide>
-            <div class="box blue">   
-              <p><img src="img/placeholder.png" ng-click="nextSlide()"></p>
-            </div>
-          </ion-slide>
-        </ion-slide-box>
+    <div ng-show="state.loggedIn == !true">
+      <div class="row responsive-sm">
+        <div class="col text-center">
+          <h1>Welcome to Material Supply Hub.</h1>
+            <p>The connection hub for material manufacturers and suppliers</p>
         </div>
-        <div class="col col-30"> 
-          <h2>Login</h2>
-            <p>
-              Existing users please login.
-            </p>
-            <button class="button button-block button-positive" ng-click="login()">
-              Login
-            </button>
-            <h3>Not a member?</h3>
-              <ion-item menu-close href="#/app/create-profile">
-                Create a profile <i class="ion-chevron-right"></i>
-              </ion-item>
-              <ion-item menu-close href="#/app/about">
-                Learn more about MSH <i class="ion-chevron-right"></i>
-              </ion-item>
-        </div>
+      </div>
+      <div class="row responsive-sm">
         <div class="col col-10"></div>
-     </div>
-</div>
- <!-- /logged out view -->
- <!-- logged in -->
-<div ng-if="state.loggedIn == true">
-        <div ng-controller="ProfileCtrl">
-              <!-- -->
-              <div class="list card">
-                <div class="item item-avatar">
-                   <img ng-src={{profile.face}} class="user-avatar" />
-                  <h2>{{ profile.firstName }}</h2>
-                  <p> {{ profile.company }}</p>
-                </div>
-                <div class="item-body">
-                  <p>
-                    <span class="padding-horizontal">
-                      <span class="badge badge-assertive">3</span>
-                      <a class="button icon-left ion-ios-email button-clear button-dark" href="#">Messages</a>
-                    </span>
-                    <span class="padding-horizontal">
-                      <span class="badge badge-assertive">1</span>
-                    <a class="button icon-left ion-ios-bell button-clear button-dark" href="#">Alerts</a>
-                    </span>
-                    <span class="padding-horizontal">
-                    <a class="button icon-left ion-ios-person button-clear button-dark" href="#/app/profile">View My Profile</a>
-                    </span>
-                  </p>
-                </div>
+        <div class="col col-40">    
+        <ion-slide-box>
+            <ion-slide>
+              <div>   
+                <p><img src="img/placeholder.png" ng-click="nextSlide()"></p>
               </div>
+            </ion-slide>
+            <ion-slide>
+              <div class="box blue">   
+                <p><img src="img/placeholder.png" ng-click="nextSlide()"></p>
+              </div>
+            </ion-slide>
+            <ion-slide>
+              <div class="box blue">   
+                <p><img src="img/placeholder.png" ng-click="nextSlide()"></p>
+              </div>
+            </ion-slide>
+          </ion-slide-box>
+          </div>
+          <div class="col col-30"> 
+            <h2>Login</h2>
+              <p>
+                Existing users please login.
+              </p>
+              <button class="button button-block button-positive" ng-click="login()">
+                Login
+              </button>
+              <h3>Not a member?</h3>
+                <ion-item menu-close href="#/app/create-profile">
+                  Create a profile <i class="ion-chevron-right"></i>
+                </ion-item>
+                <ion-item menu-close href="#/app/about">
+                  Learn more about MSH <i class="ion-chevron-right"></i>
+                </ion-item>
+          </div>
+          <div class="col col-10"></div>
+      </div>
+    </div>
+    <!-- /logged out view -->
+    <!-- logged in -->
+    <div ng-show="state.loggedIn == true" class="row responsive-sm">
+      <!-- left col -->
+      <div class="col col-25">
+        <!-- my profile -->
+        <div ng-controller="ProfileCtrl" class="list card">
+                <div class="item item-avatar">
+                   <img ng-src={{profile.logo}} class="profile-logo" />
+                  <h2>{{profile.company}}</h2>
+                  <p>{{profile.address1}}</p> 
+                  <p>{{profile.address2}}</p> 
+                  <p>{{profile.city}}, {{profile.state }}, {{profile.zip}}</p>
+                  <p>{{profile.country}}</p> 
+                  <hr />
+                  <p>{{profile.phone}}</p>
+                  <p>{{profile.email}}</p>
+                  <hr />
+                  <p><strong>My Rating:</strong> <br /><i class="icon ion-android-star energized"></i>
+                      <i class="icon ion-android-star energized"></i>
+                      <i class="icon ion-android-star energized"></i>
+                      <i class="icon ion-android-star energized"></i>
+                      <i class="icon ion-android-star-outline energized"></i>
+                    </p>
+                </div>
         </div>
-              <!-- -->
-
-        <div>
-        <!-- communications stuff goes here -->
+        <!-- my capabilities -->
+          <div class="list card">
+            <div class="item item-divider">My Capabilities</div>
+            <div>
+                  <ion-list ng-controller="ProfileCtrl">
+                    <ion-item>
+                      <div class="item-body">
+                        <span class="padding-horizontal" ng-repeat="capability in capabilities">
+                          <button class="button icon-left ion-close button-stable">{{capability.title}}</button>
+                        </span>  
+                      </div>
+                    </ion-item>
+                    <ion-item>
+                      <span>Add Capabilities</span>
+                      <span class="item-input-inset">
+                        <label class="item-input-wrapper">
+                          <i class="icon fa fa-search placeholder-icon"></i>
+                          <input type="text" placeholder="Search for capabilities">
+                        </label>
+                      </span>
+                      </ion-item>
+                    <!--<button class="button button-block button-stable" 
+                      ng-click="addCapability()">
+                     <i class="icon ion-ios-plus"></i>
+                     Add Capability</button>-->
+                     
+                  </ion-list>
+            </div>
+          </div> 
+          <!-- /my capabilities -->
+      </div>
+      <!-- /left col -->
+      <!-- right col -->
+      <div class="col col-75">
+        <!-- actions -->
+        <div ng-controller="ProfileCtrl" class="list card">
+         <div class="item-body">
+                     <span class="padding-horizontal" ng-if="profile.type == 'manufacturer'">
+                      <button class="button button-positive">{{profile.drafts}}</button>
+                      <a class="button button-clear button-dark" href="#">Drafts</a>
+                    </span>
+                    <span class="padding-horizontal" ng-if="profile.type == 'manufacturer'">
+                      <button class="button button-calm" ng-controller="ProposalsCtrl" >{{proposals.length}}</button>
+                      <a class="button button-clear button-dark" href="#">Submitted</a>
+                    </span>
+                     <span class="padding-horizontal" ng-if="profile.type == 'supplier'">
+                      <button class="button button-calm" ng-controller="ProposalsCtrl" >{{proposals.length}}</button>
+                      <a class="button button-clear button-dark" href="#">Received</a>
+                    </span>
+                    <span class="padding-horizontal">
+                      <button class="button button-balanced">{{profile.accepted}}</button>
+                      <a class="button button-clear button-dark" href="#">Accepted</a>
+                    </span>
+                     <span class="padding-horizontal" ng-if="profile.type == 'supplier'">
+                      <button class="button button-assertive">{{profile.accepted}}</button>
+                      <a class="button button-clear button-dark" href="#">Denied</a>
+                    </span>
+                    <span class="padding-horizontal">
+                      <button class="button button-energized">{{profile.quoting}}</button>
+                      <a class="button button-clear button-dark" href="#">Quoting</a>
+                    </span>
+                    <span class="padding-horizontal">
+                     <button class="button button-royal">{{profile.awarded}}</button>
+                      <a class="button button-clear button-dark" href="#">Awarded</a>
+                    </span>
+                    <!-- communications -->
+                      <span class="padding-horizontal">
+                      <span class="badge badge-assertive">3</span>
+                      <a class="button button-clear button-dark" href="#">Unread messages</a>
+                    </span>
+                      <!-- /communications -->
+          </div>
         </div>
+        <!-- /actions -->
+        <!--  my proposal -->
           <div class="list card">
             <div class="item item-divider">My Proposals</div>
             <div>
@@ -111,44 +169,45 @@
                       </ion-item>
                   </ion-list>
             </div>
-          </div>
-          
-        <!-- pending approval
-        <div class="list card" data-ng="(requests | filter: { status: 'pending'}).length > 0">
-            <div class="item item-divider">Pending Approval</div>
+          </div>     
+          <!-- /my proposals -->   
+           <!--  activity feed -->
+          <div class="list card" ng-controller="ProfileCtrl">
+            <div class="item item-divider">Activity Feed</div>
             <div>
-                  <ion-list ng-controller="RequestsCtrl">
-                      <ion-item class="item-remove-animate item-avatar item-icon-right" 
-                          ng-repeat="request in requests | filter: { status: 'pending' }" 
+                  <ion-list>
+                      <ion-item class="item-remove-animate" 
+                          ng-repeat="item in feed" 
                           type="item-text-wrap" 
-                          href="#/app/requests/{{request.id}}">
-                          <img ng-src="{{request.face}}">
-                          <h2>{{request.title}}</h2>
-                          <p>{{request.type}} <span class="right strong">{{request.amount | currency}}</span></p>
-                          <i class="icon ion-chevron-right icon-accessory"></i>
+                          href="#">
+                          <p>{{item.title}}</p>
                       </ion-item>
                   </ion-list>
             </div>
-          </div> -->
-           <!-- approved 
-          <div class="list card" data-ng="(requests | filter: { status: 'approved'}).length > 0">
-            <div class="item item-divider">Recently Approved</div>
-            <div>
-                  <ion-list ng-controller="RequestsCtrl">
-                      <ion-item class="item-remove-animate item-avatar item-icon-right" 
-                          ng-repeat="request in requests | filter: { status: 'approved' }" 
-                          type="item-text-wrap" 
-                          href="#/app/requests/{{request.id}}">
-                          <img ng-src="{{request.face}}">
-                          <h2>{{request.title}}</h2>
-                          <p>{{request.type}} <span class="right strong">{{request.amount | currency}}</span></p>
-                          <i class="icon ion-chevron-right icon-accessory"></i>
-                      </ion-item>
-                  </ion-list>
+          </div>     
+          <!-- /activity feed --> 
+           <!--  activity feed -->
+          <div class="list card">
+            <div class="item item-divider">My Widgets</div>
+            <div class="item-body">
+                 <span class="padding-horizontal">
+                      <button class="button button-positive"><i class="icon ion-stats-bars"></i></button>
+                      <a class="button button-clear button-dark" href="#">Average Steel Price</a>
+                  </span>
+                  <span class="padding-horizontal">
+                      <button class="button button-positive"><i class="icon ion-pie-graph"></i></button>
+                      <a class="button button-clear button-dark" href="#">Sales by Region</a>
+                  </span>
+                  <span class="padding-horizontal">
+                      <button class="button button-positive"><i class="icon ion-arrow-graph-up-right"></i></button>
+                      <a class="button button-clear button-dark" href="#">Progress</a>
+                  </span>         
             </div>
-          </div> -->
-          
-</div>
+          </div>     
+          <!-- /activity feed --> 
+      </div>
+    <!-- /right col -->
+  </div>
 <!-- /logged in view -->
   </ion-content>
 </ion-view>
